--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/style.css" />
+    <script src="./js/renderCard.js" defer></script>
     <title>Document</title>
   </head>
   <body>
@@ -53,7 +54,7 @@
               </div>
             </div>
           </div>
-          <button class="button__order">Закзать звонок</button>
+          <button class="button__order">Заказать звонок</button>
         </div>
       </div>
       <div class="header__menu">
@@ -87,40 +88,103 @@
       <div class="container">
         <h2 class="product__title">Каталог продукции</h2>
         <div class="product__card">
-          <div class="card">
+          <a href="#" class="card">
             <img src="./img/card/card-1.png" alt="" />
             <p>Прессованная плитка</p>
-          </div>
-          <div class="card">
+          </a>
+          <a href="#" class="card">
             <img src="./img/card/card-2.png" alt="" />
             <p>Вибролитая плитка</p>
-          </div>
-          <div class="card">
+          </a>
+          <a href="#" class="card">
             <img src="./img/card/card-3.png" alt="" />
             <p>Садовый бордюр</p>
-          </div>
-          <div class="card">
+          </a>
+          <a href="#" class="card">
             <img src="./img/card/card-4.png" alt="" />
             <p>Дорожный бордюр</p>
-          </div>
-          <div class="card">
+          </a>
+          <a href="#" class="card">
             <img src="./img/card/card-5.png" alt="" />
             <p>Строительные блоки</p>
-          </div>
-          <div class="card">
+          </a>
+          <a href="#" class="card">
             <img src="./img/card/card-6.png" alt="" />
             <p>Фасадная плитка</p>
-          </div>
-          <div class="card">
+          </a>
+          <a href="#" class="card">
             <img src="./img/card/card-7.png" alt="" />
             <p>Водостоки тротуарные</p>
-          </div>
-          <div class="card">
+          </a>
+          <a href="#" class="card">
             <img src="./img/card/card-8.png" alt="" />
             <p>Крышки на столбы</p>
-          </div>
+          </a>
         </div>
-        <div class="product__button"></div>
+        <button class="product__button">Больше товаров</button>
+      </div>
+    </section>
+
+    <section class="about">
+      <div class="container">
+        <img src="./img/about.png" class="about__img">
+        <div class="about__text">
+          <h2 class="about__text-title">О нас</h2>
+          <h3 class="about__text-item">«Мастер Строй» - надежная и недорогая тротуарная плитка в Волоколамском районе</h3>
+          <p class="about__text-text">Наша компания готова помочь вам и с первым и со вторым аспектом данной задачи. В нашем каталоге вы сможете подобрать желаемый вариант материала и сразу заказать профессиональную укладку на вашем участке. Вниманию покупателей всегда доступна качественная и прочная тротуарная плитка от производителя по оптимальной стоимости.
+            <br>
+            <br>
+            Если вам нужна надежная тротуарная плитка, купить  в Волоколамском районе такой материал можно у нас, цена продукции из каталога вас приятно удивит и не ударит по бюджету. Оформить заказ можно прямо на сайте. Если в процессе выбора вам понадобится консультация специалиста, вы всегда можете заказать обратный звонок, используя специальную функцию на сайте, либо самостоятельно позвонить менеджеру по указанным телефонам.
+            <br>
+            <br>
+            Теперь если вам нужна тротуарная плитка, вы знаете где ее можно приобрести. «Мастер Строй» - компания-производитель, которая гарантирует достойный уровень качества по приятной цене.
+            <br>
+            <br>
+            ООО «МАСТЕ
+            <br>
+            <br>
+          </p>
+          <button class="about__text-button">Приобрести</button>
+        </div>
+      </div>
+    </section>
+    <section class="top">
+      <div class="container">
+        <h2 class="top__title">Топ товаров</h2>
+        <div class="top__card">
+          <!-- <div class="card"> -->
+            <!-- <div class="card__description">
+              <img src="./db/top/top-1.png" alt="" class="card__description-img">
+              <h3 class="card__description-title">Шестигранник 250x220x70</h3>
+              <div class="card__description-text">
+                <p>Размер:</p>
+                <p>Количество:</p>
+                <p>Цвета в наличии:</p>
+              </div>
+              <div class="card__description-color">
+                <span class="color-1 color"></span>
+                <span class="color-2 color"></span>
+                <span class="color-3 color"></span>
+                <span class="color-4 color"></span>
+                <span class="color-5 color"></span>
+                <span class="color-6 color"></span>
+                <span class="color-7 color"></span>
+                <span class="color-8 color"></span>
+              </div>
+            </div>
+            <div class="card__price">
+              <div class="card__price-content">
+                <p class="content__color">Серый</p>
+                <p class="content__text">500 руб кв/м</p>
+              </div>
+              <button class="card__price-add">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="19" viewBox="0 0 20 19" fill="none">
+                  <path d="M9.81818 0V9.5M9.81818 19V9.5M9.81818 9.5H0M9.81818 9.5H20" stroke="white"/>
+                  </svg>
+              </button>
+            </div> -->
+          <!-- </div> -->
+        </div>
       </div>
     </section>
   </body>
