--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="./js/works.js" defer></script>
     <script src="./js/advantages.js" defer></script>
     <script src="./js/scroll.js" defer></script>
+    <script src="./js/burgerMenu.js" defer></script>
     <title>Document</title>
   </head>
   <body>
@@ -70,6 +71,7 @@
           <a href="#works" class="menu__text">Наши работы</a>
           <a href="#advantages" class="menu__text">Наши преимущества</a>
         </div>
+        <button class="burger-menu"></button>
       </div>
     </header>
 
@@ -183,7 +185,7 @@
             </div>
           </div>
           <div class="fabrication__info-right">
-            <!-- <iframe width="687" height="385" src="https://www.youtube.com/embed/T7nz2xUYBww" title="YouTube video player" frameborder="0" allowfullscreen></iframe> -->
+            <iframe width="687" height="385" src="https://www.youtube.com/embed/T7nz2xUYBww" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
           </div>
         </div>
       </div>
@@ -204,6 +206,7 @@
         </div>
       </div>
     </section>
+
     <footer class="footer">
       <div class="container">
         <div class="footer__content">
